syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.properties.support.input";

import "google/protobuf/any.proto";


message PropertyValueMapInput {
  google.protobuf.Any propertyId = 1;
  google.protobuf.Any propertyValue = 2;
  optional double propertyValueTime = 3;
}

message PropertyDefinitionMapInput {
  google.protobuf.Any propertyId = 1;
  PropertyDefinitionInput propertyDefinition = 2;
  double propertyDefinitionTime = 3;
  bool propertyTrackingPolicy = 4;
}

message PropertyDefinitionInput {
  string type = 1;
  bool propertyValuesAreMutable = 2;
  optional google.protobuf.Any defaultValue = 3;
}
